Add preview to tests